fixed dark mode color in projects

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,9 +1,9 @@
 
-div#window-right {
+/* div#window-right { */
     /* background:#ffe8e8; */
     /* background: white; */
-    background-image: linear-gradient(to right, rgba(238,255,255,01), #fff);
-}
+    /* background-image: linear-gradient(to right, rgba(238,255,255,01), #fff); */
+/* } */
 
 .project-flex-container {
     display: flex;
@@ -34,13 +34,15 @@ div#window-right {
     padding: 10px 10px;
     margin: auto;
     margin-bottom: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+    box-shadow: 0 4px 8px 0 rgba(192,192,192,0.8);
     transition: 0.3s;
     font-size: 1em;
 }
 
 .project:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); */
+    box-shadow: 0 8px 16px 0 rgba(192,192,192,0.8);
 }
 
 .project:active {
@@ -68,16 +70,17 @@ div#window-right {
     /* background:#ffe8e8; */
     /* background: #d3fcff; */
     /* background: #eee; */
-    background-image: linear-gradient(to right, rgba(232,244,248,1), white);
+    background: linear-gradient(to right, rgba(232,244,248,1), white);
+    color: #000;
     /* margin-top: 20px; */
     padding:20px 50px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(192,192,192,0.8);
     transition: 0.3s;
 }
 
 /* On mouse-over, add a deeper shadow */
 #readme-container:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(192,192,192,0.8);
 }
 
 .github-chart-container {
@@ -89,13 +92,13 @@ div#window-right {
     padding: 2% 5%;
     /* height: 200px; */
     text-align: center;
-    background-image: linear-gradient(to right, rgba(232,244,248,1), white);
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background: linear-gradient(to right, rgba(232,244,248,1), white);
+    box-shadow: 0 4px 8px 0 rgba(192,192,192,0.8);
     transition: 0.3s;
 }
 
 #github-chart:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 4px rgba(192,192,192,0.8);
 }
 
 #github-chart img {
